# opencv4_examples

./: .gitignore  CMakeLists.txt  main.cpp
